--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "name": "extract-i18n",
+  "name": "easy-localized-translation",
   "version": "1.0.0",
   "description": "",
   "main": "lib/index.js",
   "repository": {
     "type": "git",
-    "url": "git@github.com:m-Ryan/extract-i18n.git"
+    "url": "git@github.com:m-Ryan/easy-localized-translation.git"
   },
   "files": [
     "lib"
   ],
   "scripts": {
     "build": "tsc",
-    "test": "jest"
+    "test": "jest",
+    "demo": "ts-node src/demo.ts"
   },
   "author": "m-Ryan",
   "devDependencies": {
@@ -23,9 +24,13 @@
     "@types/jest": "^28.1.3",
     "@types/node": "^18.0.0",
     "@types/shelljs": "^0.8.11",
+    "@types/google-spreadsheet": "^3.3.0",
+    "@types/lodash": "^4.14.186",
     "jest": "^28.1.1"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
+    "google-spreadsheet": "^3.3.0",
     "lodash": "^4.17.21",
     "shelljs": "^0.8.5",
     "ts-node": "^10.8.1",
